--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,4 +58,34 @@ jobs:
         port: ${{ secrets.PORT }}
         key:  ${{ secrets.SSHKEY }}
         script: /home/wizards-build-push/push.ps1 ${{ github.sha }}
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v') # if tag starts with "v"
+    steps:
+      - name: Setup Task
+        uses: arduino/setup-task@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Download Release Files
+        uses: actions/download-artifact@v2
+        with:
+          path: dst/
+
+      - name: Prepare Release Files
+        run: task release-files
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          draft: true
+          prerelease: false
+          files: |
+            "release/${{ github.sha }}"
