--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Shuffle files around
       run: |
         mkdir "release/${{ github.sha }}"
-        mv release/*.zip "release/${{ github.sha }}"
+        cp release/*.zip "release/${{ github.sha }}"
 
     - name: Upload files to centcomm
       uses: appleboy/scp-action@master
@@ -57,7 +57,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key:  ${{ secrets.SSHKEY }}
         port: ${{ secrets.PORT }}
-        source: "release/${{ github.sha }}/SS14.Client.zip"
+        source: "release/*.zip"
         target: ${{ secrets.RELEASE_FOLDER }}
         rm: true
 
