--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,8 @@ jobs:
     - name: Shuffle files around
       run: |
         mkdir "release/${{ github.sha }}"
-        cp release/*.zip "release/${{ github.sha }}"
+        cp release/*.zip /
+        mv release/*.zip "release/${{ github.sha }}"
 
     - name: Upload files to centcomm
       uses: appleboy/scp-action@master
@@ -57,7 +58,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key:  ${{ secrets.SSHKEY }}
         port: ${{ secrets.PORT }}
-        source: "release/*.zip"
+        source: "*.zip"
         target: ${{ secrets.RELEASE_FOLDER }}
         rm: true
 
