--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,16 +50,14 @@ jobs:
         target: ${{ secrets.BUILDS_FOLDER }}
         strip_components: 1
   
-    - name: Upload release
-      uses: appleboy/scp-action@master
+    - name: Copy single file to remote
+      uses: garygrossgarten/github-action-scp@release
       with:
+        local: release/SS14.Client.zip
+        remote: ${{ secrets.HOST }}
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key:  ${{ secrets.SSHKEY }}
-        port: ${{ secrets.PORT }}
-        source: "release/*.zip"
-        target: ${{ secrets.HOME_FOLDER }}
-        rm: true
+        privateKey: ${{ secrets.SSHKEY }}
 
     - name: Update manifest JSON
       uses: appleboy/ssh-action@master
