--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,15 +50,15 @@ jobs:
         target: ${{ secrets.BUILDS_FOLDER }}
         strip_components: 1
   
-    - name: Update release version
-      uses: garygrossgarten/github-action-scp@release
-      with:
-        local: release/SS14.Client.zip
-        remote: release/SS14.Client.zip
-        host: ${{ secrets.HOST }}
-        port: ${{ secrets.PORT }}
-        username: ${{ secrets.USERNAME }}
-        privateKey: ${{ secrets.SSHKEY }}
+#    - name: Update release version
+#      uses: garygrossgarten/github-action-scp@release
+#      with:
+#        local: release/SS14.Client.zip
+#        remote: release/SS14.Client.zip
+#        host: ${{ secrets.HOST }}
+#        port: ${{ secrets.PORT }}
+#        username: ${{ secrets.USERNAME }}
+#        privateKey: ${{ secrets.SSHKEY }}
 
     - name: Update manifest JSON
       uses: appleboy/ssh-action@master
